--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "istanbul": "^0.4.5",
     "jasmine": "^2.8.0",
     "jasmine-core": "^2.8.0",
+    "lowdb": "^1.0.0",
     "minimatch": "^3.0.4",
     "once": "^1.4.0",
     "path-is-absolute": "^1.0.1",
