--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "brace-expansion": "^1.1.8",
     "concat-map": "^0.0.1",
     "exit": "^0.1.2",
+    "express": "^4.16.2",
     "fs.realpath": "^1.0.0",
     "glob": "^7.1.2",
     "inflight": "^1.0.6",
@@ -23,10 +24,12 @@
     "once": "^1.4.0",
     "path-is-absolute": "^1.0.1",
     "stryker-cli": "^0.1.3",
+    "uuid": "^3.2.1",
     "wrappy": "^1.0.2"
   },
   "devDependencies": {},
   "scripts": {
+    "start": "node app.js",
     "test": "istanbul cover jasmine.js"
   },
   "author": "",
